--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"></activity>
         <activity
             android:name=".RegistrationActivity"
             android:screenOrientation="portrait"
@@ -54,6 +54,14 @@
 
         <activity
             android:name=".CartActivity"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".CheckoutActivity"
             android:screenOrientation="portrait"></activity>
 
     </application>
