--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 //    implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha06'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
 }
