Worked on some UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,10 @@
             android:name=".CheckoutActivity"
             android:screenOrientation="portrait"></activity>
 
+        <activity
+            android:name=".OrderHistoryActivity"
+            android:screenOrientation="portrait"></activity>
+
     </application>
 
 </manifest>
