--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/gh_logo"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@drawable/gh_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -64,6 +65,10 @@
 
         <activity
             android:name=".ForgotPasswordActivity"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".EditProfileActivity"
             android:screenOrientation="portrait"></activity>
 
         <activity
