--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.grocers.hub">
 
     <permission
         android:name="com.android.pricer.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
+
+    <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
+        tools:ignore="ProtectedPermissions"></uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"
+        tools:ignore="ProtectedPermissions"></uses-permission>
 
     <uses-permission android:name="com.android.pricer.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
